gallery alignment issue corrected

--- a/css/app.css
+++ b/css/app.css
@@ -438,5 +438,5 @@ header.teamhead2 h1 {
 /*work shop image size reduced*/
 .work-shop{
   height: 250px;
-  width: 400px;
+  width: 300px;
 }
